# kubernetes-assignment-rust-backend

./: .dockerignore  README.md  todo-api-deployment.yaml  todo-web-deployment.yaml  todo-web-service.yaml
deployments/: db-config.yaml  db-migration-down-job.yaml  db-migration-job.yaml  db-migration-up-job.yaml  db-secrets.yaml  db-seed-job.yaml  diesel-setup-job.yaml  postgres-claim.yaml  postgres-deployment.yaml  postgres-persistence-volume-deployment.yaml  postgres-persistence-volume-minikube-full.yaml  todo-api-deployment.yaml  todo-api-service.yaml  todo-config.yaml  todo-web-deployment.yaml  todo-web-loadbalancer-service.yaml  todo-web-nodeport-service.yaml
todo-api/: Cargo.toml  Dockerfile
todo-api/migrations/2023-06-10-173448_create_todo/: up.sql
todo-api/src/: main.rs  models.rs  schema.rs
todo-migration/: Dockerfile  migration.sql  seed.sql  up.sql
todo-web/: Cargo.toml  Dockerfile
todo-web/src/: main.rs
