[package]
name = "todo-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
diesel = { version = "2.1.0", features = ["postgres"] }
dotenvy = "0.15.7"
rocket = "=0.5.0-rc.3"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"

